# 3dScanner

./: CMakeLists.txt  README.md  README.rst
Samples/: Battery.ply  Bottle72 Points.ply  SolderFluxBottle.ply
include/: display.hpp  filehandling.hpp  idle.hpp  main.hpp  menu.hpp  preferences.hpp  settings.hpp  uart.hpp
src/: display.cpp  filehandling.cpp  idle.cpp  main.cpp  menu.cpp  preferences.cpp  settings.cpp  uart.cpp
